--- a/time.html
+++ b/time.html
@@ -22,6 +22,8 @@
 </head>
   
 <body>
+    <h1><marquee behavior="altenate" direction="alternate"> Clock </marquee></h1>
+
     <div id="clock">8:10:45</div>
   
     <script>
